styles.css
* {
    margin: 0;
    padding: 0;
    font-family: 'Roboto', sans-serif;
    box-sizing: border-box;
}

body {
    background: #080808;
    color: #fff;
}

/* HEADER */
#header {
    width: 100%;
    height: 100vh;
    background-image: url(./images/pexels-soner-arkan-14213354.jpg);
    background-size: cover;
    background-position: center;
}

.container {
    padding: 10px 10%;
}

/* NavBar */

#navbar {
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-wrap: wrap;
}

.logo {
    width: 140px;
}

nav ul li{
    display: inline;
    list-style: none;
    margin: 10px 15px;
}

nav ul li a {
    color: #080808;
    text-decoration: none;
    font-size: 18px;
    position: relative;
}

nav ul li a::after {
    content: '';
    width: 0;
    height: 3px;
    background: #f90707;
    position: absolute;
    left: 0;
    bottom: -6px;
    transition: 0.5s;
}

nav ul li a:hover::after{
    width: 100%;
}

/* Hero Section */
#welcome-section {
    margin-top: 20%;
    font-size: 30px;
}
#welcome-section p i{
    color:#f90707;
}

#welcome-section h1{
    margin-top: 20px;
    font-size: 60px;
}

#welcome-section h1 span {
    color:#f90707;
}

/* Main Page */

#main-page {
    width: 100%;
    height: 100vh;
    background-color: #1c1c1c;
}

/* About Section */
#about-me {
    display: flex;
    align-items: center;
    margin-top: 2.5%;
}

#about-me .text {
    padding: 0 20px;
}

#about-me h1 {
    font-size: 30px;
    color:#f90707;
}

#about-me p {
    margin-top: 10px;
    font-size: 17.5px;
    text-align: justify;
}

#about-me p a{
    color: 	#FFD700;
    text-decoration: none;
    font-size: 18px;
    position: relative;
}

#about-me p a::after {
    content: '';
    width: 0;
    height: 3px;
    background: #FFD700;
    position: absolute;
    left: 0;
    bottom: -6px;
    transition: 0.5s;
}

#about-me p a:hover::after{
    width: 100%;
}

.profile-image{
    width: 400px;
    height: fit-content;
    vertical-align: middle;
    margin: 5px;
    border-radius: 25px;
}

